# northworth

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  PRIVACY.md  PROJECT_INSTRUCTIONS.md  README.md  go.mod  index.html  package.json  renovate.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml
app/: app.js  index.html  styles.css
cmd/northworth/: main.go
docs/: dependency-automation.md  release-process.md
docs/adlc/: roles.md
docs/decisions/: 0001-local-first-adlc.md  0002-advice-boundaries.md  0003-ai-privacy-boundary.md  0004-source-governance.md  0005-local-data-boundary.md  0006-encryption-at-rest.md  0007-ofx-qfx-import-parser.md  README.md  template.md
docs/design/: design-tokens.md  product-brief.md
docs/product/: advice-boundaries.md  ai-privacy-boundary.md  encryption-at-rest-spike.md  local-data-boundary.md  source-governance.md
docs/qa/: ai-privacy-cases.md  encryption-at-rest-cases.md  local-data-privacy-cases.md  misleading-language-cases.md  source-governance-cases.md
examples/: README.md
internal/web/: routes.go  (+1 more)
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: budget.rs  imports.rs  market_data.rs  mod.rs  reports.rs  risk.rs  storage.rs
src-tauri/src/domain/: account.rs  budget.rs  household.rs  market_data.rs  mod.rs  money.rs  reports.rs  risk.rs  transaction.rs
src-tauri/src/imports/: categorization.rs  csv.rs  mod.rs  ofx.rs
src-tauri/src/storage/: mod.rs
(+5 files in other folders)
